# Jouyou-Kanji-Dictionary

./: pyproject.toml
kanji_site/: manage.py
kanji_site/kanji_dictionary/: admin.py  apps.py  models.py  urls.py  views.py
kanji_site/kanji_dictionary/migrations/: 0001_initial.py  0002_alter_kanji_grade.py  0003_alter_kanji_klc_index.py  0004_kanji_jlpt_alter_kanji_id_alter_radical_id.py
kanji_site/kanji_dictionary/static/css/: styles.css
kanji_site/kanji_dictionary/templates/kanji_dictionary/: about.html  base.html  home.html  kanji-list.html  kanji_detail.html  kanji_list.html  search.html
kanji_site/kanji_site/: asgi.py  settings.py  urls.py  wsgi.py
kanji_site/scripts/: kanji_extractor.py  load_kanji.py  load_radicals.py  radical_extractor.py
kanji_site/scripts/csv_files/: Kanji_database_table.csv  kanji_table.csv  radicals.csv
