[tool.poetry]
name = "Kanji-Project"
version = "0.1.0"
description = ""
authors = ["Vinicius"]

[tool.poetry.dependencies]
python = "^3.10"
Django = "^4.0.5"
bs4 = "^0.0.1"
requests = "^2.28.0"
django-extensions = "^3.1.5"

[tool.poetry.dev-dependencies]

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
